styles/styles.scss
$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Lato, Helvetica, Arial, sans-serif;
$body-color: #d0d5c6;
$primary: $body-color;
$body-bg: #3d4037;
$thumbnail-border-color: $body-color;
$card-bg: rgba(255, 255, 255, 0.1);
$list-group-bg: transparent;

@import "~bootstrap/scss/bootstrap";
@import "typeface-lato";

header {
  background-color: $body-color;
  img {
    height: 2.5em;
  }
}

.has-banner .icon {
  margin-top: -50%;
  .rounded {
    background-color: $body-bg;
  }
}

.banner {
  min-height: 10vh;
}

img.embed-responsive-item {
  object-fit: cover;
}

.card {
  border: none;
}

.landing {
  &::after {
    content: "";
  background: url('/img/icon.svg') no-repeat center center;
  background-size: cover;
  opacity: 0.04;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
  }
  label {
    font-family: $font-family-sans-serif;
  }
  .button-primary {
    color: $body-bg;
    font-weight: normal;
  }
  .ahead {
    font-family: $font-family-sans-serif;
  }
}

